# WasmEdge-storage

./: .CurrentChangelog.md  .gitmodules  CMakeLists.txt  Cargo.toml  Changelog.md  LICENSE.spdx  README.md
.github/workflows/: build.yml  release.yml
include/: CMakeLists.txt  storage_base.h  storage_env.h  storage_func.h  storage_module.h  wasmedge-storage.h
lib/: CMakeLists.txt  storage_func.cpp  storage_module.cpp  wasmedge-storage.cpp
tools/: CMakeLists.txt
tools/ssvm-storage/: CMakeLists.txt  main.cpp
