[package]
name = "ssvm_storage_rust"
version = "0.1.0"
authors = ["SecondState"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13.0"
libc = "0.2.68"
bindgen = "0.53.2"
cmake = "0.1.42"
cc = "1.0.50"

[lib]
crate-type = ["staticlib"]
path = "utils/rust_native_storage_library/src/lib.rs"